<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/home_tab"
            android:checked="true" />
        <item
            android:id="@+id/nav_product_info"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/productinfo_tab" />

    </group>

    <item
        android:title="@string/nav_support" >
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/nav_help" />

            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/nav_settings" />

        </menu>

    </item>

</menu>